freemed project changelog
($Id$)

* Thu Jan 25 2001 rufustfirefly
  - fixed procedure module to pass "module" variable in wizard
  - added includes to billing functions modules so that the module loader
    doesn't complain
  - scope fixes in modules/authorizations.module.php in add
  - moved help.php3 -> help.php
  - added reports category, icon and module loader, and frame for class
  - added doc/ directory, moved much documentation from root of tree
  - moved img/index.php3 -> img/index.php
  - added img/magnify.gif and "Module Information" to admin module
  - silly typo removed in user module
  - added module_information.php, and updated phpwebtools with extra fields,
    etc
  - default MODULE_AUTHOR in lib/module.php
  - fixed logout to have proper define usage
  - fixed authenticate to be nicely parsed and proper

* Wed Jan 24 2001 fforest
  - admin.php added procdtbilled to procrec
  - genereate_fixed_forms.php fix bug in insurance validation
      re arranged code to allow a new bill to be generated when a procs eoc or auth
      changes. this ensures auth,eoc and procs aren't miss billed.
      mark billed now generates payrec entried with payreccat of BILLED for each proc marked.
  - manage_bills.php - re written as a control break to make dtbilled processing easier. 
        the date billed on the screen shows the oldest date of a proc set.
  - manage_payment_records.php no show procdtbilled for procs. 
        transfer type ledger entries now capture transferto as payreclink and the procbalcurrent
        is copied to the payrecamt.
  - payment_records.php  add code to show the new BILLED ledger entries. also show who was billed.
           transfers now show transferred to value as prim,sec etc.
  - macros.php added PAYER_TYPES array and BILLED define.
  - render_forms.php  fix a bug in diagnosis counting in testAdd function
  - prescription_module. fix include error.
  - procedure_module fix to get insurer from new patient container values.